--- a/modules/689/pages/literal-doc-index.adoc
+++ b/modules/689/pages/literal-doc-index.adoc
@@ -17,10 +17,12 @@ No   Acten  Designation        Ort Jahr Mon Z.
     G[g]. KRes. an dasselbe           Kammerkasse      "            "        "   14
 3.  Vorst. des Colons Krückeberg      gegen Ver-       "            "      Nov   11    
 "   Vortrag des GKR odReik            pfaudung         "            "        "   15   
-" xxGg. KRes. an Krückeberg           seiner sämmt    
-                                      lichebn Läu      Berenbusch   "        "    21
-4.  Vorst. des [e/p] Krückeberg       dereien         
-e   Cpt. KRes. an Of. Creuzinger      item             Bbg          "        "    25   
+"   Gg. KRes. an Krückeberg           seiner sämmt-    "            "        "    "    
+                                      lichebn Läu      
+4.  Vorst. des [e/p] Krückeberg                        Berenbusch   "        "    21
+                                      dereien         
+
+"   Gg. KRes. an Of. Creuzinger       item             Bbg          "        "    25   
                                       Gesuch um 
 5.  Bericht des Of. Creuzinger        Verkauf sein-    Baum         "     degbr   10
     Anb. Situations. Riß der          ner Länderei   
@@ -30,10 +32,12 @@ e   Cpt. KRes. an Of. Creuzinger      item             Bbg          "        "  
                                       Weide            "            "         "   19
 "   Höchstes Retir. Ler. Regb.  
 "   P.V. des H odReik u Höchsters
-"   Resir. Sr. Durchlaucht
-7.  Gg H res. aus Amt Bückeburg
-8.  Bericht Amts Bückeburg
-9.  Bericht Amts Bückeburg
+    Resir. Sr. Durchlaucht                             "             "        "   23 
+7.  Gg H res. aus Amt Bückeburg                        "             "        "   24
+8.  Bericht Amts Bückeburg                             "          1842      Jan    2  
+"   Gg. KRes an der Selbe                              "             "        "   20
+"   desgl. an den KRes. Berger                         "             "        "    "  
+9.  Bericht Amts Bückeburg                             "             "      Febr   8    
 10. Obligation über aus Fürstl.       Obligation.
     Kammerkasse geliehene
     200 rd Courant
