--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -13,14 +13,14 @@ image::01-r.png[link=self]
 |1.
 |Vorstellung des Col. Krückeberg +
 No 10 in Berenbesch +
-Anb
+Anb.
 |Bewilligung +
 eines darlehes +
 ad 200 r.
 |Bbg.
 |1841
-|Octob.
-|2.
+|October
+|2
 
 |2.
 |Berichts Amts Bückeburg
@@ -41,86 +41,54 @@ ad 200 r.
 
 |3
 |Vorst. des Colons Krückeberg
-.2+|gegen Ver- +
-pfändugn
+|gegen Ver-
 |"
 |"
 |Nov
 |11
+
+|"
+|Vortrag des GKR odReik
+|pfaudung
+|"
+|"
+|"
+|15
 |===
 
+....
+No   Acten  Designation        Ort Jahr Mon Z.
 
-. 1841
-Anb.
-Bericht Amts Bückeberg
-Cour. aus
-7.
-gst. K. Res. an dasselbe —
-14
-Kammerkesse
-Vorst. des Colons Krückeberg
-Nov. 11
-gegen Ver¬
-Vortrag des GHR. odReik
-pfandre
-e
-"
-15.
--
-seiner sämmt¬
-Ist. Res. an p Krückeberg
-"
-lichen Län¬
-21
-Berenbsch
-Vorst. des l. Kruckeberg
-dereien
-Blig
-Cpt. K Res. an Of. Creuzinger
-" 25.
-item
-Gesuch um
 
-|5
-|Bericht des Of. Creuzinger
-|
-|Verbaut sein
-Dezbr 10
-Baum
-Anl. Situations-Risk der
-ner Länderei,
-en auf der
-Söhren Weide
-Söhren
-16
-1.
-Bby.
-6, Vortrag des GKK. ödKeik
-Weide
-Höchstes Rescr. Ser. Reg. ~
-19
-betß.
-P. V. des H. odReck u Höchstes
-“
-“ 23
-Rescr. Sr. Durchlaucht
-e
-Cpt. KRes. aus Amt Bückeburg
-,,24.
-1842
-"
-2
-Jan
-Bericht Amts Bäckeberg
-" 20.
-" Cst. KRes. an dasselbe.
-desgl. an den KKm. Berger
-Febr
-Bericht Amts Bückeberg
-Obligation
-Obligation über aus Fürstl.
-10,
-Kammerkasse geliehene
-200 rd Courant
-N.
-2.
+1.  Vorstellung des Col. Krückeberg   Bewilligung                       October
+    No 10 in Berenbesch               eines dasselbe  Bbg.       1841             2
+    Anb                               ad 200 rP                 
+2.  Berichts Amts Bückeburg           Cour. aus        "            "        "    7  
+    G[g]. KRes. an dasselbe           Kammerkasse      "            "        "   14
+3.  Vorst. des Colons Krückeberg      gegen Ver-       "            "      Nov   11    
+"   Vortrag des GKR odReik            pfaudung         "            "        "   15   
+"   Gg. KRes. an Krückeberg           seiner sämmt-    "            "        "    "    
+                                      lichebn Läu      
+4.  Vorst. des [e/p] Krückeberg                        Berenbusch   "        "    21
+                                      dereien         
+
+"   Gg. KRes. an Of. Creuzinger       item             Bbg          "        "    25   
+                                      Gesuch um 
+5.  Bericht des Of. Creuzinger        Verkauf sein-    Baum         "     degbr   10
+    Anb. Situations. Riß der          ner Länderei   
+            Söhren Weide              en auf der
+                                      Söhren           Bbg.         "         "   16
+6.  Vortrag des GKR. odReik           
+                                      Weide            "            "         "   19
+"   Höchstes Retir. Ler. Regb.  
+"   P.V. des H odReik u Höchsters
+    Resir. Sr. Durchlaucht                             "             "        "   23 
+7.  Gg H res. aus Amt Bückeburg                        "             "        "   24
+8.  Bericht Amts Bückeburg                             "          1842      Jan    2  
+"   Gg. KRes an der Selbe                              "             "        "   20
+"   desgl. an den KRes. Berger                         "             "        "    "  
+9.  Bericht Amts Bückeburg                             "             "      Febr   8    
+10. Obligation über aus Fürstl.       Obligation.
+    Kammerkasse geliehene
+    200 rd Courant
+....
