--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -86,32 +86,83 @@ Söhren Weide
 .3+|Verkauf sein- +
 ner Länderei- +
 en auf der +
-Söhren      
-Weide
+Söhren +
+Weide +
+be[rs]
 |Baum
 |"
 |degbr
 |10
 
 |6.
-|Vortrag des GKR. odReik           
+|Vortrag des GKR. odReik
 |Bbg.
 |"
 |"
 |16
 
-STOPPED HERE:
 |"
-|Höchstes Retir. Ler. Reg.
-|  
-|"|   P.V. des H odReik u Höchsters
-    Resir. Sr. Durchlaucht                             "             "        "   23 
-|7.|  Gg H res. aus Amt Bückeburg                        "             "        "   24
-|8.|  Bericht Amts Bückeburg                             "          1842      Jan    2  
-|"|   Gg. KRes an der Selbe                              "             "        "   20
-|"|   desgl. an den KRes. Berger                         "             "        "    "  
-|9.|  Bericht Amts Bückeburg                             "             "      Febr   8    
-|10.| Obligation über aus Fürstl.       Obligation.
-    Kammerkasse geliehene
-    200 rd Courant
-....
+|Höchstes Retir. L[e/i]r. Reg.
+|"
+|"
+|"
+|19
+
+|"
+|P.V. des H odReik u Höchsters +
+Resir. Sr. Durchlaucht
+|
+|"
+|"
+|"
+|23 
+
+|7.
+|Gg H res. aus Amt Bückeburg
+|
+|"
+|"
+|"
+|24
+
+|8.
+|Bericht Amts Bückeburg
+|
+|"
+|1842
+|Jan
+|2  
+
+|"
+|Gg. KRes an der Selbe
+|
+|"
+|"
+|"
+|20
+
+|"
+|desgl. an den KRes. Berger
+|
+|"
+|"
+|"
+|"  
+
+|9.
+|Bericht Amts Bückeburg
+|"
+|"
+|Febr
+|8    
+
+|10.
+|Obligation über aus Fürstl. +
+Kammerkasse geliehene +
+200 rd Courant
+|Obligation.
+|
+|
+|
+|
+|===
