--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -116,53 +116,53 @@ Resir. Sr. Durchlaucht
 |"
 |"
 |23 
-
-|7.
-|Gg H res. aus Amt Bückeburg
-|
-|"
-|"
-|"
-|24
-
-|8.
-|Bericht Amts Bückeburg
-|
-|"
-|1842
-|Jan
-|2  
-
-|"
-|Gg. KRes an der Selbe
-|
-|"
-|"
-|"
-|20
-
-|"
-|desgl. an den KRes. Berger
-|
-|"
-|"
-|"
-|"  
-
-|9.
-|Bericht Amts Bückeburg
-|"
-|"
-|Febr
-|8    
-
-|10.
-|Obligation über aus Fürstl. +
-Kammerkasse geliehene +
-200 rd Courant
-|Obligation.
-|
-|
-|
-|
 |===
+//|7.
+//|Gg H res. aus Amt Bückeburg
+//|
+//|"
+//|"
+//|"
+//|24
+//
+//|8.
+//|Bericht Amts Bückeburg
+//|
+//|"
+//|1842
+//|Jan
+//|2  
+//
+//|"
+//|Gg. KRes an der Selbe
+//|
+//|"
+//|"
+//|"
+//|20
+//
+//|"
+//|desgl. an den KRes. Berger
+//|
+//|"
+//|"
+//|"
+//|"  
+//
+//|9.
+//|Bericht Amts Bückeburg
+//|"
+//|"
+//|Febr
+//|8    
+//
+//|10.
+//|Obligation über aus Fürstl. +
+//Kammerkasse geliehene +
+//200 rd Courant
+//|Obligation.
+//|
+//|
+//|
+//|
+//|===
