--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -116,14 +116,15 @@ Resir. Sr. Durchlaucht
 |"
 |"
 |23 
+
+|7.
+|Gg H res. aus Amt Bückeburg
+|
+|"
+|"
+|"
+|24
 |===
-//|7.
-//|Gg H res. aus Amt Bückeburg
-//|
-//|"
-//|"
-//|"
-//|24
 //
 //|8.
 //|Bericht Amts Bückeburg
