--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -148,21 +148,22 @@ Resir. Sr. Durchlaucht
 |"
 |"
 |"  
+
+|9.
+|Bericht Amts Bückeburg
+|
+|"
+|"
+|Febr
+|8    
+
+|10.
+|Obligation über aus Fürstl. +
+Kammerkasse geliehene +
+200 rd Courant
+|Obligation.
+|
+|
+|
+|
 |===
-//|9.
-//|Bericht Amts Bückeburg
-//|"
-//|"
-//|Febr
-//|8    
-//
-//|10.
-//|Obligation über aus Fürstl. +
-//Kammerkasse geliehene +
-//200 rd Courant
-//|Obligation.
-//|
-//|
-//|
-//|
-//|===
