--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -10,7 +10,8 @@ image::01-r.png[link=self]
 |No| Acten Designation||Ort|Jahr|Mon| Z.
 
 
-|1.  Vorstellung des Col. Krückeberg +
+|1.
+|Vorstellung des Col. Krückeberg +
 No 10 in Berenbesch
 Anb
 |Bewilligung +
