--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -1,37 +1,30 @@
-= Document Index 
-:page-role: wide
-
-image::01-r.png[link=self]
-
-== Under Development
-
 [%header,cols="1,7,5,3,2,2,1"]
 |===
-|No| Acten Designation||Ort|Jahr|Mon| Z.
+|No | Acten Designation || Ort | Jahr | Mon | Z.
 
 |1.
 |Vorstellung des Col. Krückeberg +
-No 10 in Berenbesch
+No 10 in Berenbusch +
 Anb.
 |Bewilligung +
-eines Darleh[e]ns +
+eines Darlehens +
 ad 200 r.
 |Bbg.
 |1841
-|October
+|Octob.
 |2
 
 |2.
-|Berichts Amts Bückeburg
+|Bericht Amt Bückeburg
 |Cour. aus
 |"
 |"
 |"
-|7  
+|7
 
 |"
-|G[g]. KRes. an dasselbe
-|Kammerkasse
+|Gg. K. Res. an dasselbe
+|Cammer-Casse
 |"
 |"
 |"
@@ -39,102 +32,103 @@ ad 200 r.
 
 |3.
 |Vorst. des Colons Krückeberg
-.4+|gegen Ver- +
-pfaudung +
+.5+|gegen Ver- +
+pfändung +
 seiner sämmt- +
-lichebn Läu +
-dereien              
-|"
-|"
-|Nov
+lichen Län- +
+dereien
+|Bbg.
+|1841
+|Nov.
 |11
 
 |"
-|Vortrag des GKR odReik
+|Vortrag des GKR od Reik
 |"
 |"
 |"
-|15   
+|15
 
 |"
-|Gg. KRes. an Krückeberg
+|Gg. K. Res. an p Krückeberg
 |"
 |"
 |"
 |"
 
 |4.
-|Vorst. des [p] Krückeberg
-|Berenbusch
+|Vorst. des p Krückeberg
 |"
-|"
+|Bbg.
+|1841
+|Nov.
 |21
 
 |"
-|Gg. KRes. an Of. Creuzinger
+|Gg. K. Res. an Of. Creuzinger
 |item +
-Gesuch [nun]
-|Bbg
+Gesuch nun
 |"
 |"
-|25   
+|"
+|25
+
 
 |5.
 |Bericht des Of. Creuzinger +
-Anb. Situations. Riß der +
-Söhren Weide
-.3+|Verkauf sein- +
-ner Länderei- +
-en auf der +
-Söhren +
-Weide +
-be[rs]
-|Baum
-|"
-|degbr
+Anb. Situations-Riß der +
+Söhren-Weide
+|Verkauf seiner +
+Ländereien auf der +
+Söhren-Weide
+|Bbg.
+|1841
+|Decbr.
 |10
 
 |6.
-|Vortrag des GKR. odReik
+|Vortrag des GHK od Reik
+|[Wegen …]
 |Bbg.
-|"
-|"
+|1841
+|Decbr.
 |16
 
 |"
-|Höchstes Retir. L[e/i]r. Reg.
+|Höchstes Rescr. [Sei. Reg.]
+|
 |"
 |"
 |"
 |19
 
 |"
-|P.V. des H odReik u Höchsters +
-Resir. Sr. Durchlaucht
+|P. V. des H. v. Reine u. Höchstes +
+Rescr. Sr. Durchlaucht
 |
 |"
 |"
 |"
-|23 
+|23
 
 |7.
-|Gg H res. aus Amt Bückeburg
+|Gg. Rescr. aus Amt Bückeburg
 |
-|"
-|"
-|"
+|Bbg.
+|1841
+|Decbr.
 |24
 
 |8.
-|Bericht Amts Bückeburg
+|Bericht Amt Bückeburg
 |
-|"
+|Bbg.
 |1842
-|Jan
-|2  
+|Jan.
+|2
 
 |"
-|Gg. KRes an der Selbe
+|Gg. K. Res. an dasselbe
 |
 |"
 |"
@@ -142,25 +136,25 @@ Resir. Sr. Durchlaucht
 |20
 
 |"
-|desgl. an den KRes. Berger
+|desgl. an den K. R. Berger
 |
 |"
 |"
 |"
-|"  
+|"
 
 |9.
-|Bericht Amts Bückeburg
+|Bericht Amt Bückeburg
 |
-|"
-|"
-|Febr
-|8    
+|Bbg.
+|1842
+|Febr.
+|8
 
 |10.
 |Obligation über aus Fürstl. +
 Kammerkasse geliehene +
-200 rd Courant
+200 r. Courant
 |Obligation.
 |
 |
