--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -1,3 +1,8 @@
+= Document Index
+:page-role: wide
+
+image::01-l-original.png[link=self]
+
 [%header,cols="1,7,5,3,2,2,1"]
 |===
 |No | Acten Designation || Ort | Jahr | Mon | Z.
