--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -3,8 +3,7 @@
 
 image::01-r.png[link=self]
 
-
-[%header,cols="1,7,5,3,2,2,1"]
+[%header,cols="^1,9a,6a,2,2,2,^1",frame=none]
 |===
 |No | Acten Designation || Ort | Jahr | Mon | Z.
 
