--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -3,6 +3,9 @@
 
 image::01-r.png[link=self]
 
+[role="section-narrow"]
+== Transliteration
+
 [%header,cols="^1,9a,6a,2,2,2,^1",frame=none]
 |===
 |No | Acten Designation || Ort | Jahr | Mon | Z.
