--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -1,9 +1,8 @@
 = 200 Reichstaler lent to Krückeberg No. 10 in Berenbusch.
 
-
-It is first of all important to realize that the order of the materials--documents, notes, etc--in the 
-case file does not reflect the order of events which the case file describes. The story flow or the actual
-events often differs from the filing order.
+The order of the ancillary documents in the case file does not reflect the chronological order of the dates on
+those documents nor the events in the life of Johann Heinrich Krückeberg that those dates represent. The story flow
+differs from the filing order.
 
 == Chronological Timeline
 
