--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -1,5 +1,13 @@
 = 200 Reichstaler lent to Krückeberg No. 10 in Berenbusch.
 
+When Johann Heinrich emigrated from Schaumburg-Lippe in 1849 and settled in Union Township, Adams County, Indianam,
+he came from a principality only three and a half times the size of Union Township and with only 20,000
+inhabitants.  When his father Jobst, in 1798, wanted to purchase land from the government to enlarge his farm yard
+and garden the, the Vormundschatliche Cammer granted his request. It was the Regency government ruling on behalf of
+the prince or count who not yet of age, still too young to rule. But in 1841 it no longer existed. That was when
+Johann Heinrich faced a sore financial trials. This time it would be the Rentcammer who would would decide his
+fate.
+
 The order of the ancillary documents in the case file does not reflect the chronological order of the dates on
 those documents nor the events in the life of Johann Heinrich Krückeberg that those dates represent. The story flow
 differs from the filing order.
