--- a/modules/689/nav.adoc
+++ b/modules/689/nav.adoc
@@ -2,10 +2,10 @@
 //NLA BU, K 2, A Nr. 689
 * xref:cover.adoc[]
 * xref:doc-index.adoc[]
+* xref:service-slip.adoc[]
 * xref:doc1.adoc[]
 ** xref:doc1-1i.adoc[]
 * xref:doc2.adoc[]
 ** xref:doc2-copt.adoc[]
-** xref:doc2-ad1.adoc[]
 ** xref:doc2-ad2.adoc[]
 * xref:doc3.adoc[]
