--- a/modules/689/pages/service-slip.adoc
+++ b/modules/689/pages/service-slip.adoc
@@ -1,4 +1,4 @@
-= Service of Notice (Insinuation) — 27 July 1841 — linked to Decree Doc 1i
+= Service of the Decree (Bescheid) — 27 July 1841 (re: Doc 1i, 10 July 1841)
 
 
 image::07-l.png[link=self]
