--- a/modules/689/nav.adoc
+++ b/modules/689/nav.adoc
@@ -2,7 +2,7 @@
 //NLA BU, K 2, A Nr. 689
 * xref:cover.adoc[]
 * xref:doc-index.adoc[]
-* xref:doc1-1i.adoc[]
+* xref:doc1i.adoc[]
 * xref:service-slip.adoc[]
 * xref:doc1.adoc[]
 * xref:doc2.adoc[]
