--- a/modules/689/pages/doc1i.adoc
+++ b/modules/689/pages/doc1i.adoc
@@ -1,4 +1,4 @@
-= Document 1i: Decree Against Krückeberg
+= Document 1i: Decree Against Krückeberg - 13 July 1841
 :page-role: wide
 
 image::03-r.png[link=self]
