--- a/modules/689/pages/doc1.adoc
+++ b/modules/689/pages/doc1.adoc
@@ -1,4 +1,4 @@
-= Document 1: Krückeberg's Statement and Request
+= Document 1: Krückeberg's Statement and Request - 2 Oct 1841
 :page-role: wide
 
 == Under Development
