--- a/modules/689/partials/cast/doc-02.adoc
+++ b/modules/689/partials/cast/doc-02.adoc
@@ -1,7 +1,6 @@
-*Cast for this document*
-xref:roster.adoc#krueckeberg-jh[Krückeberg]  
-xref:roster.adoc#amt-bbg[Amt Bückeburg]  
-xref:roster.adoc#rentkammer[Rentkammer]  
-xref:roster.adoc#gkr-od-reik[GKR od Reik] 
-xref:roster.adoc#creuzinger[Of. Creuzinger]
-
+* xref:roster.adoc#krueckeberg-jh[Krückeberg]  
+* xref:roster.adoc#amt-bbg[Amt Bückeburg]  
+* xref:roster.adoc#rentkammer[Rentkammer]  
+* xref:roster.adoc#gkr-od-reik[GKR od Reik] 
+* xref:roster.adoc#creuzinger[Of. Creuzinger]
+* 
