--- a/modules/689/pages/cover.adoc
+++ b/modules/689/pages/cover.adoc
@@ -5,9 +5,9 @@ image::cover-orig.png[link=self]
 
 ....
 Activa                               Rep. II        
-[three struck-
-through
-lines]
+II. Currente
+2 Privat Personen
+im Fürstenthum Schaumburg Lippe
 B. [Jm] Amte Bückeburg
 
 
