--- a/modules/689/pages/cover.adoc
+++ b/modules/689/pages/cover.adoc
@@ -3,30 +3,29 @@
 
 image::cover-orig.png[link=self]
 
-....
-Activa                               Rep. II        
-II. Currente
-2 Privat Personen
-im Fürstenthum Schaumburg Lippe
-B. [Jm] Amte Bückeburg
+[verse]
+____
+Activa                                         Rep. II        
+[.line-through]#II. Currente#
+[.line-through]#2 Privat Personen#
+[.line-through]#im Fürstenthum Schaumburg Lippe#
+B. [Im] Amte Bückeburg
 
 
 
+                  Acta
+                Activa
 
 
-                         Acta
-                       Activa
-
-
-                                   in specie
-1841-1845                ein dem Colon Krückeberg
-                         No 10 in Berenbusch aus
-                         Kammerkasse dargeliehenes
-                         Capital von 2 rch Courant-
-                         betez.
+                        in specie
+1841-1845       ein dem Colon Krückeberg
+                        No 10 in Berenbusch aus
+                        Kammerkasse dargeliehenes
+                        Capital von 2 rch Courant-
+                        betez.
 
 
 
 
 B32.
-....
+____
