--- a/modules/689/pages/cover.adoc
+++ b/modules/689/pages/cover.adoc
@@ -16,13 +16,13 @@ B. [Im] Amte Bückeburg
                   Acta
                 Activa
 
-
+1841-1845      
                         in specie
-1841-1845      ein dem Colon Krückeberg
-                        No 10 in Berenbusch aus
-                        Kammerkasse dargeliehenes
-                        Capital von 2 rch Courant-
-                        betez.
+                   ein dem Colon Krückeberg
+                   No 10 in Berenbusch aus
+                   Kammerkasse dargeliehenes
+                   Capital von 2 rch Courant-
+                   betez.
 
 
 
