--- a/modules/689/pages/cover.adoc
+++ b/modules/689/pages/cover.adoc
@@ -3,22 +3,27 @@
 
 image::cover-orig.png[link=self]
 
-[verse]
-____
-Activa                                         Rep. II        
-[.line-through]#II. Currente#
-[.line-through]#2 Privat Personen#
-[.line-through]#im Fürstenthum Schaumburg Lippe#
-B. [Im] Amte Bückeburg
+[literal,subs="verbatim,quotes"]
+....
+[line-through]#II. Currente#
+[line-through]#2 Privat Personen#
+[line-through]#im Fürstenthum Schaumburg-Lippe#
+B. im Amte Bückeburg
+
+Acta
+Activa
+
+in specie
+1841–1845
 
 
 
                   Acta
                 Activa
 
-1841-1845      
+     
                         in specie
-                   ein dem Colon Krückeberg
+ 1841-1845         ein dem Colon Krückeberg
                    No 10 in Berenbusch aus
                    Kammerkasse dargeliehenes
                    Capital von 2 rch Courant-
@@ -28,4 +33,4 @@ B. [Im] Amte Bückeburg
 
 
 B32.
-____
+....
