--- a/modules/689/pages/cover.adoc
+++ b/modules/689/pages/cover.adoc
@@ -27,8 +27,8 @@ in specie
  1841-1845         ein dem Colon Krückeberg
                    No 10 in Berenbusch aus
                    Kammerkasse dargeliehenes
-                   Capital von 2 rch Courant-
-                   betez.
+                   Capital von 2 rch Courant
+                   betre.
 
 
 
