--- a/modules/689/pages/cover.adoc
+++ b/modules/689/pages/cover.adoc
@@ -20,7 +20,7 @@ B. im Amte Bückeburg
  1841-1845         ein dem Colon Krückeberg
                    No 10 in Berenbusch aus
                    Kammerkasse dargeliehenes
-                   Capital von 2 rch Courant
+                   Capital von 2 rthl Courant
                    betre.
 
 
