--- a/modules/689/pages/cover.adoc
+++ b/modules/689/pages/cover.adoc
@@ -1,8 +1,12 @@
 = Cover (under deveopment)
 
-
 image::cover-orig.png[link=self]
 
+[cols="1a,1a"]
+|===
+|Transliteration|Translation
+
+|
 [literal,subs="verbatim,quotes"]
 ....
 Activa
@@ -12,19 +16,60 @@ Activa
 B. im Amte Bückeburg
 
 
-                  Acta
-                Activa
+              Acta
+            Activa
 
      
-                        in specie
- 1841-1845         ein dem Colon Krückeberg
-                   No 10 in Berenbusch aus
-                   Kammerkasse dargeliehenes
-                   Capital von 2 rthl Courant
-                   betre.
+                     in specie
+ 1841-1845       ein dem Colon Krückeberg
+                 No 10 in Berenbusch aus
+                 Kammerkasse dargeliehenes
+                 Capital von 2 rthl Courant
+                 betre.
 
 
 
 
 B32.
 ....
+
+|
+[literal,subs="verbatim,quotes"]
+....
+[line-through]#II. Current (series)#
+[line-through]#2 Private persons#
+[line-through]#in the Principality of Schaumburg-Lippe#
+B. in the Amt of Bückeburg
+
+Files
+Active matters
+
+                  in specie (in the specific matter)
+1841–1845     a capital sum lent from the Chamber Treasury
+              to the colon (farmholder) Krückeberg,
+              No. 10 in Berenbusch,
+              amounting to 200 Reichsthaler (current coin),
+              re. (concerning).
+
+
+
+
+B. 32.
+....
+|===
+
+== Glossary of Terms
+
+Activa:: Cover/category label meaning **active matters** (pending business). Often paired with a repertory (e.g.,
+*Activa — Rep. II*).
+B.:: Registry **series/class letter** (“**B.** im Amte Bückeburg”; “**B. 32.**” = shelf/sequence mark). Not a word;
+it’s the filing letter.
+Acta Activa:: Literally “**active files**” — the bundle contains pending/working papers, not a closed docket.
+in specie:: Latin filing rubric: **“in the specific matter [of] …”**; introduces the subject line that follows.
+(Spelling is *specie*, not *speice*.)
+Kammerkasse:: The **Chamber Treasury**, i.e., the Rentkammer’s finance office (source/route of loans, receipts,
+etc.). Period spelling also “Cammer-Casse”.
+2 rthl. Courant:: **2 Reichsthaler in current coin**.  
+*Notes:* **rthl.** = Reichsthaler; you also see **rt**, **Rthlr.**; **Courant** means face-value specie (not bank money). On your cover the formula reads “**200 rthl. Courant**.”
+betr. (betreffend):: **regarding / concerning / re.** Common cover/index shorthand closing the subject line.
+
