--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -3,7 +3,7 @@
 In 1849 when Johann Heinrich emigrated from Schaumburg-Lippe and settled in Union Township, Adams County, Indiana,
 he arrived from a principality only three and a half times the size of Union Township and with only 20,000
 inhabitants. Years earlier, in 1798, when his father Jobst wanted to purchase land from the government to enlarge
-his farm yard and garden the Vormundschaftliche Cammer (Guardianship or Regency Chamber) granted his request.
+his farm yard and garden, the Vormundschaftliche Cammer (Guardianship or Regency Chamber) granted his request.
 
 The "Guardianship Chamber" or "Regency Chamber" was the primary governing council responsible for the
 administration of the state and the management of its finances and domains during the minority of the heir, Count
