--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -12,8 +12,9 @@ heir, Count George William. She had been appointed regent in 1787 after the deat
 Her regency, conducted with the assistance of Count Johann Ludwig von Wallmoden-Gimborn, was notable for its
 beneficial reforms in economics and education. 
 
-By 1841 the regency no longer existed. That was when Johann Heinrich faced a period of sore financial trials. This
-time it would be the Rentcammer who would would decide his fate.
+By 1841 the regency no longer existed. This was when Johann Heinrich's sore financial trials were entered into the
+public record. And this time it would be the Rentcammer who would would past judgement on him and his
+creditor.
 
 The order of the ancillary documents in the case file does not reflect the chronological order of the dates on
 those documents nor the events in the life of Johann Heinrich Krückeberg that those dates represent. The story flow
