--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -1,7 +1,7 @@
 = 200 Reichstaler lent to Krückeberg No. 10 in Berenbusch.
 
 In 1849 when Johann Heinrich emigrated from Schaumburg-Lippe and settled in Union Township, Adams County, Indiana,
-he arrived from a principality only three and a half times the size of Union Township and with only 20,000
+he arrived from a principality only three and a half times the size of Union Township and one with only 20,000
 inhabitants. Years earlier, in 1798, when his father Jobst wanted to purchase land from the government to enlarge
 his farm yard and garden, the Vormundschaftliche Cammer (Guardianship or Regency Chamber) granted his request.
 
