--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -5,7 +5,7 @@ he arrived from a principality only three and a half times the size of Union Tow
 inhabitants. Years earlier, in 1798, when his father Jobst wanted to purchase land from the government to enlarge
 his farm yard and garden, the Vormundschaftliche Cammer (Guardianship or Regency Chamber) granted his request.
 
-The "Guardianship Chamber" or "Regency Chamber" was the primary governing council responsible for the
+This "Guardianship Chamber" or "Regency Chamber" was the primary governing council responsible for the
 administration of the state and the management of its finances and domains during the minority of the heir, Count
 George William. The regency was led by Countess Juliane of Schaumburg-Lippe, who was the mother of the minor
 heir, Count George William. She had been appointed regent in 1787 after the death of her husband, Count Philip II.
